[gd_scene load_steps=7 format=3 uid="uid://br5qjcpuptdi1"]

[ext_resource type="Script" path="res://scripts/player_headbutt_ability.gd" id="1_n8ejq"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_vo1yp"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="3_q0gsy"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="4_ajwkf"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="5_ii0jo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6pkyy"]
radius = 22.0227

[node name="PlayerHeadbuttAbility" type="Node2D"]
script = ExtResource("1_n8ejq")

[node name="State" type="Node" parent="."]
script = ExtResource("2_vo1yp")

[node name="root" type="Node" parent="State"]
script = ExtResource("3_q0gsy")
initial_state = NodePath("not ready")

[node name="not ready" type="Node" parent="State/root"]
script = ExtResource("4_ajwkf")

[node name="to ready" type="Node" parent="State/root/not ready"]
script = ExtResource("5_ii0jo")
to = NodePath("../../ready")
event = &"not ready to ready"
delay_in_seconds = "0.0"

[node name="ready" type="Node" parent="State/root"]
script = ExtResource("4_ajwkf")

[node name="to not ready" type="Node" parent="State/root/ready"]
script = ExtResource("5_ii0jo")
to = NodePath("../../not ready")
event = &"ready to not ready"
delay_in_seconds = "0.0"

[node name="to headbutting" type="Node" parent="State/root/ready"]
script = ExtResource("5_ii0jo")
to = NodePath("../../headbutting")
event = &"ready to headbutting"
delay_in_seconds = "0.0"

[node name="headbutting" type="Node" parent="State/root"]
script = ExtResource("4_ajwkf")

[node name="to not ready" type="Node" parent="State/root/headbutting"]
script = ExtResource("5_ii0jo")
to = NodePath("../../not ready")
event = &"headbutting to not ready"
delay_in_seconds = "0.1"

[node name="HeadbuttZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadbuttZone"]
rotation = 3.13224
shape = SubResource("CircleShape2D_6pkyy")
debug_color = Color(0.801051, 0.26373, 0.812251, 0.42)

[connection signal="state_physics_processing" from="State/root/not ready" to="." method="_on_not_ready_state_physics_processing"]
[connection signal="state_entered" from="State/root/ready" to="." method="_on_ready_state_entered"]
[connection signal="state_exited" from="State/root/ready" to="." method="_on_ready_state_exited"]
[connection signal="state_physics_processing" from="State/root/ready" to="." method="_on_ready_state_physics_processing"]
[connection signal="state_entered" from="State/root/headbutting" to="." method="_on_headbutting_state_entered"]
[connection signal="body_entered" from="HeadbuttZone" to="." method="_on_headbutt_zone_body_entered"]
